--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=userService
+spring.application.name=user-service
+server.port=8081
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/fitness_app_db
@@ -12,3 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
   # Use a fixed timezone across the app
 spring.jackson.time-zone=Asia/Kolkata
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.healthcheck.enabled=true
